# cloudbench

./: .gitignore  README.md  RUNNING_YOUR_TOOL_AGAINST_CLOUDBENCH.md
benchmark/: ASK_TYPES.md  BUILDING_BLOCKS.md  FAILURE_REGISTRY.md  LEADERBOARD.md  MAP.md  NAMING.md  PUBLIC_BOUNDARIES.md  PUBLIC_VISION.md  SCHEMA.md  SERVICE_ATLAS.md  SERVICE_CATALOG.md  SOLUTIONS_LIBRARY.md  TRAINING_LOOP.md  UPDATED_PLAN.md
benchmark/cases/: aws-alb-three-tier.yaml  aws-ec2-java-image.yaml  aws-ec2-java-video.yaml  aws-ec2-webapi.yaml  aws-ec2-wordcount.yaml  aws-elasticache-service.yaml  aws-etl-pipeline.yaml  aws-lambda-queue.yaml  aws-mlai-inference.yaml  aws-rds-api.yaml  aws-s3-batch.yaml  aws-scheduled-cron.yaml  aws-stateful-store.yaml  aws-static-cdn.yaml  aws-streaming-kinesis.yaml  azure-static-site.yaml  gcp-static-site.yaml  uc1.yaml  uc2.yaml  uc3.yaml
benchmark/grid/: cells.yaml
benchmark/grid/services/: aws.yaml
benchmark/grid/sources/: aws-solutions-library.yaml
benchmark/repos/: L2-L5_DESIGNS.md  RECIPE.md
benchmark/repos/recipes/: aws-alb-three-tier.yaml  aws-ec2-webapi.yaml  aws-elasticache-service.yaml  aws-etl-pipeline.yaml  aws-lambda-queue.yaml  aws-mlai-inference.yaml  aws-rds-api.yaml  aws-s3-batch.yaml  aws-static-cdn.yaml  (+5 more)
harness/: pyproject.toml
harness/cloudbench/: __init__.py  catalog.py  cli.py  gen.py  graph.py  leaderboard.py  score.py  security.py  validate_ext.py
harness/tests/: test_catalog.py  test_docs_in_sync.py  test_generate.py  test_leaderboard.py  test_score.py  test_security.py
scripts/: seed_leaderboard.py  sync_docs.py
(+36 files in other folders)
