[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudbench"
version = "0.1.0"
description = "CloudBench harness — validate and score CloudBot pipeline runs"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
bench = "cloudbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloudbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
